[gd_scene load_steps=21 format=2]

[ext_resource path="res://EndingCutscene2.gd" type="Script" id=1]
[ext_resource path="res://assets/cutscenes/MAIN_MENU_BG.png" type="Texture" id=2]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/cutscenes/Panel_6_finish.png" type="Texture" id=4]
[ext_resource path="res://assets/cutscenes/ET_station_fixed.png" type="Texture" id=5]
[ext_resource path="res://assets/cutscenes/Station_Fixed_Glow.png" type="Texture" id=6]
[ext_resource path="res://assets/cutscenes/Station_Broken_Glow.png" type="Texture" id=7]
[ext_resource path="res://assets/cutscenes/Reactor_Room_Fixed.png" type="Texture" id=8]
[ext_resource path="res://assets/cutscenes/props/heavy_forward.png" type="Texture" id=9]
[ext_resource path="res://assets/cutscenes/props/light_forward.png" type="Texture" id=10]
[ext_resource path="res://assets/cutscenes/props/light_back.png" type="Texture" id=11]
[ext_resource path="res://assets/cutscenes/props/heavy_back.png" type="Texture" id=12]
[ext_resource path="res://assets/cutscenes/props/heavy_forward_clone.png" type="Texture" id=13]
[ext_resource path="res://assets/cutscenes/props/light_forward_clone.png" type="Texture" id=14]
[ext_resource path="res://assets/cutscenes/props/heavy_normal.png" type="Texture" id=15]
[ext_resource path="res://assets/cutscenes/props/light_normal.png" type="Texture" id=16]

[sub_resource type="Animation" id=1]
resource_name = "Animate"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.67 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StationGlow:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.67 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StationGlow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.67, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.67 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "metarestart" ],
"method": "play_sound"
}, {
"args": [ "usegreenality" ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Animate"
length = 10.0
step = 0.01
tracks/0/type = "method"
tracks/0/path = NodePath("../..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.97, 2.19, 2.44, 2.72, 3.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ "heavycoyote" ],
"method": "play_sound"
}, {
"args": [ "heavystep" ],
"method": "play_sound"
}, {
"args": [ "heavyland" ],
"method": "play_sound"
}, {
"args": [ 1 ],
"method": "change_ghosts"
}, {
"args": [ 2 ],
"method": "change_ghosts"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.97, 2.44, 2.72, 2.86, 3.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ "lightcoyote" ],
"method": "play_sound"
}, {
"args": [ "lightland" ],
"method": "play_sound"
}, {
"args": [ "undostrong" ],
"method": "play_sound"
}, {
"args": [ "undostrong" ],
"method": "play_sound"
}, {
"args": [ "usegreenality" ],
"method": "play_sound"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HeavyActor:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.88, 1.2, 3.88, 4.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 9 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HeavyActor:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.59, 5.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HeavyActor:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.57, 1.69, 1.81, 1.97, 2.19, 2.44, 2.72, 2.86, 3.05, 3.88, 4.29, 5.56, 6.34 ),
"transitions": PoolRealArray( 1, 0.366021, 2.37842, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 192, 267 ), Vector2( 192, 267 ), Vector2( 192, 247 ), Vector2( 192, 267 ), Vector2( 192, 267 ), Vector2( 239, 214 ), Vector2( 228, 263 ), Vector2( 228, 263 ), Vector2( 239, 214 ), Vector2( 192, 267 ), Vector2( 192, 267 ), Vector2( 137, 267 ), Vector2( 137, 267 ), Vector2( -30, 267 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LightActor:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.94, 1.16, 3.88, 4.51 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 16 ), ExtResource( 10 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LightActor:flip_h")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.33, 0.54, 5.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LightActor:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.57, 1.69, 1.81, 1.97, 2.19, 2.44, 2.72, 2.86, 3.05, 3.88, 4.29, 5.56, 6.34 ),
"transitions": PoolRealArray( 1, 0.420448, 2.46229, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 334, 268 ), Vector2( 334, 268 ), Vector2( 334, 248 ), Vector2( 334, 268 ), Vector2( 334, 268 ), Vector2( 297, 209 ), Vector2( 309, 273 ), Vector2( 309, 273 ), Vector2( 297, 209 ), Vector2( 334, 268 ), Vector2( 334, 268 ), Vector2( 392, 268 ), Vector2( 392, 268 ), Vector2( 544, 268 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ColorRect:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 5.61, 6.34, 6.39, 6.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("HeavyClone1:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 6.36 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("LightClone1:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 6.36 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("HeavyClone1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightClone1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Animate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeavyClone1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.42, 0.51, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 192, 267 ), Vector2( 192, 267 ), Vector2( 239, 214 ), Vector2( 228, 263 ), Vector2( 228, 263 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LightClone1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.42, 0.51, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 334, 268 ), Vector2( 334, 268 ), Vector2( 297, 209 ), Vector2( 309, 273 ), Vector2( 309, 273 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HeavyClone1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LightClone1:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="EndingCutscene2" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0.133333, 0.235294, 0.321569, 1 )

[node name="CutsceneHolder" type="Node2D" parent="."]

[node name="Panel1" type="Sprite" parent="CutsceneHolder"]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="StationGlow" type="Sprite" parent="CutsceneHolder/Panel1"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 7 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="CutsceneHolder/Panel1"]
anims/Animate = SubResource( 1 )

[node name="Panel2" type="Sprite" parent="CutsceneHolder"]
texture = ExtResource( 8 )
centered = false

[node name="HeavyActor" type="Sprite" parent="CutsceneHolder/Panel2"]
position = Vector2( 137, 267 )
texture = ExtResource( 9 )

[node name="LightActor" type="Sprite" parent="CutsceneHolder/Panel2"]
position = Vector2( 392, 268 )
texture = ExtResource( 10 )

[node name="HeavyClone1" type="Sprite" parent="CutsceneHolder/Panel2"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 228, 263 )
texture = ExtResource( 13 )

[node name="LightClone1" type="Sprite" parent="CutsceneHolder/Panel2"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 309, 273 )
texture = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CutsceneHolder/Panel2"]
autoplay = "RESET"
anims/Animate = SubResource( 2 )
anims/RESET = SubResource( 4 )

[node name="AnimationPlayerClone1" type="AnimationPlayer" parent="CutsceneHolder/Panel2"]
anims/Animate = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="CutsceneHolder/Panel2"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0.133333, 0.235294, 0.321569, 1 )

[node name="Panel3" type="Sprite" parent="CutsceneHolder"]
visible = false
self_modulate = Color( 0.796078, 0.380392, 0.380392, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Holder" type="Label" parent="CutsceneHolder/Panel3"]
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 3 )
align = 1

[node name="ColorRect2" type="ColorRect" parent="CutsceneHolder/Panel3/Holder"]
modulate = Color( 0, 0, 0, 0.478431 )
margin_left = 47.0
margin_top = 16.0
margin_right = 473.0
margin_bottom = 262.0

[node name="CreditsButton" type="Button" parent="CutsceneHolder/Panel3/Holder"]
margin_left = 230.0
margin_top = 199.0
margin_right = 295.0
margin_bottom = 214.0
focus_neighbour_bottom = NodePath("../QuitButton")
text = "Credits"

[node name="QuitButton" type="Button" parent="CutsceneHolder/Panel3/Holder"]
visible = false
margin_left = 211.0
margin_top = 221.0
margin_right = 317.0
margin_bottom = 236.0
focus_neighbour_top = NodePath("../CreditsButton")
text = "Whew, done for now"

[node name="PuzzleButton" type="Button" parent="CutsceneHolder/Panel3/Holder"]
visible = false
margin_left = 204.0
margin_top = 243.0
margin_right = 323.0
margin_bottom = 258.0
text = "Just one more puzzle..."

[node name="Pointer" type="Sprite" parent="CutsceneHolder/Panel3/Holder"]

[node name="Label" type="Label" parent="CutsceneHolder/Panel3/Holder"]
margin_left = 1.0
margin_top = 23.0
margin_right = 511.0
margin_bottom = 181.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Entwined Time

A two time manipulation puzzle game"
align = 1

[node name="AdvanceLabel" type="Label" parent="CutsceneHolder"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 1.0
margin_top = 287.0
margin_right = 512.0
margin_bottom = 301.0
theme = ExtResource( 3 )
align = 1
valign = 1
